# systrader

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
data/: AAPL.csv  MSFT.csv
examples/: buy_hold_strategy.py  end2end_backtest.ipynb  end2end_backtest_sl_tp.ipynb  sma_strategy.py  strategy.py
margin_trader/: constants.py  errors.py  event.py  performance.py  strategy.py  trader.py
margin_trader/broker/: __init__.py  broker.py  fill.py  order.py  portfolio.py  position.py  sim_broker.py
margin_trader/data_handlers/: __init__.py  _csv.py  _pandas.py  data_handler.py  yahoo.py
margin_trader/data_source/: __init__.py  csv_data_handler.py  data_handler.py  pandas_data_handler.py  yahoo_data_handler.py
margin_trader/performance/: metric.py  utils.py
systrader/: constants.py  errors.py  event.py  strategy.py  trader.py
systrader/broker/: __init__.py  broker.py  fill.py  order.py  position.py  sim_broker.py
systrader/datahandler/: __init__.py  backtest.py  datahandler.py  live.py  utils.py
systrader/performance/: utils.py
tests/: test_csv_datahandler.py  test_datahandler.py  test_errors.py  test_events.py  test_naive_portfolio.py  test_pandas_datahandler.py  test_performance.py  test_position.py  test_position_manager.py  test_sim_broker.py  test_trader_backtest.py  test_yahoo_datahandler.py
tests/backtest/: test_buy_hold.py  test_sma_strategy.py
tests/broker/: test_fill.py  test_order.py  test_position.py  test_position_manager.py  test_sim_broker.py
tests/data/: AAPL.csv  MSFT.csv  SYMBOL1.csv  SYMBOL2.csv  SYMBOL3.csv
tests/data_handlers/: test_csv_datahandler.py  test_pandas_datahandler.py  test_yahoo_datahandler.py
tests/datahandler/: test_backtest_datahander.py  test_live_datahandler.py
