[tool.poetry]
name = "margin-trader"
version = "0.1.0"
description = ""
authors = ["Kehinde Olalusi <kehindeolalusi75@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.1"
empyrical-reloaded = "^0.5.10"
numpy = "^1.26.4"
pyfolio-reloaded = "^0.9.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
